[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/thePlane.png" type="Texture" id=1]
[ext_resource path="res://scenes/plane.gd" type="Script" id=2]
[ext_resource path="res://assets/arrow.png" type="Texture" id=3]
[ext_resource path="res://assets/cross-hair.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 181, 190.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1030.5, 101 )

[node name="plane" type="Node2D" groups=["enemy"]]
script = ExtResource( 2 )

[node name="body" type="Sprite" parent="."]
position = Vector2( 0, -5 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="right" type="Position2D" parent="."]
position = Vector2( 0, 157 )

[node name="left" type="Position2D" parent="."]
position = Vector2( 0, -158 )

[node name="shootPos" type="Position2D" parent="."]
position = Vector2( 624, 0 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -1.99998, 0.99999 )
scale = Vector2( 18, 19.1 )

[node name="2dBody" type="Area2D" parent="." groups=["plane"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="2dBody"]
position = Vector2( -2, 0.5 )
shape = SubResource( 1 )

[node name="attacking_area" type="Area2D" parent="." groups=["attackingsensor"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attacking_area"]
position = Vector2( 1336.5, 1 )
shape = SubResource( 2 )

[node name="PlayerAditional" type="Node2D" parent="."]

[node name="enemyIndicator" type="Node2D" parent="PlayerAditional"]

[node name="Sprite" type="Sprite" parent="PlayerAditional/enemyIndicator"]
modulate = Color( 0.760784, 0.0156863, 0.0156863, 1 )
position = Vector2( 613, 0 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="crossHair" type="Sprite" parent="PlayerAditional"]
position = Vector2( 2360, 0 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 4 )

[connection signal="area_entered" from="2dBody" to="." method="_on_2dBody_area_entered"]
[connection signal="area_entered" from="attacking_area" to="." method="_on_attacking_area_area_entered"]
[connection signal="area_exited" from="attacking_area" to="." method="_on_attacking_area_area_exited"]
